--- a/2. Rheometric Shapes.ipynb
+++ b/2. Rheometric Shapes.ipynb
@@ -1,218 +1,398 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rbansal42/computer-vision/blob/main/2.%20Rheometric%20Shapes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "xMpx_dU_nICY"
-      },
-      "outputs": [],
-      "source": [
-        "# Installing Dependencies\n",
-        "\n",
-        "%pip install opencv-python\n",
-        "from google.colab.patches import cv2_imshow"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "1UVKzkVNnZ1d"
-      },
-      "outputs": [],
-      "source": [
-        "# Importing required packages\n",
-        "\n",
-        "import cv2\n",
-        "print(\"Successfully imported\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 555
-        },
-        "id": "QVt67IHRnk9x",
-        "outputId": "3522ad85-993a-4e95-b392-29dfb25b4427"
-      },
-      "outputs": [],
-      "source": [
-        "# Reading image\n",
-        "\n",
-        "OG_img = cv2.imread(\"og_img.jpeg\")\n",
-        "print(\"Image read successfully\")\n",
-        "\n",
-        "# Viewing imported image\n",
-        "print(\"Rendering Image\")\n",
-        "cv2_imshow(OG_img)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 555
-        },
-        "id": "SzwkytyXrrKj",
-        "outputId": "42c76939-f947-44f1-c640-f4889584b642"
-      },
-      "outputs": [],
-      "source": [
-        "# Converting image to grayscale\n",
-        "gray_image = cv2.cvtColor(OG_img, cv2.COLOR_BGR2GRAY)\n",
-        "print(\"Converted Successfully\")\n",
-        "\n",
-        "# Saving grayscale image\n",
-        "# cv2.imwrite(\"gray_img.jpg\", gray_image)\n",
-        "# print(\"Saved Successfully\")\n",
-        "\n",
-        "# Viewing grayscale image\n",
-        "print(\"Rendering Image\")\n",
-        "cv2_imshow(gray_image)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 537
-        },
-        "id": "QE7wz8NHkLgx",
-        "outputId": "b7e64627-63a0-4a1a-c6f7-e717305e7d7e"
-      },
-      "outputs": [],
-      "source": [
-        "#drawing a line on the image\n",
-        "\n",
-        "lined_img = cv2.line(OG_img, (0,0), (255,255), (0,0,255), 5) #(srcImg, start, end, color, thickness)\n",
-        "print(\"Line Drawn Successfully\")\n",
-        "\n",
-        "\n",
-        "cv2_imshow(lined_img)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 519
-        },
-        "id": "bPen4BGDlDAA",
-        "outputId": "b525ee4f-9da1-4144-d7e3-8869b1dc58d3"
-      },
-      "outputs": [],
-      "source": [
-        "# drawing an arrow line on the img\n",
-        "\n",
-        "arrowed_line = cv2.arrowedLine(OG_img, (0,255), (255,255), (255,0,0), 6)\n",
-        "cv2_imshow(arrowed_line)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 519
-        },
-        "id": "2TSxb5qrlvFT",
-        "outputId": "2a4aedf0-a597-472c-9241-36edc7a7f1bc"
-      },
-      "outputs": [],
-      "source": [
-        "#rectangle\n",
-        "rectangle_img = cv2.rectangle(OG_img, (384,0), (510,128), (0,255,0), 1)\n",
-        "cv2_imshow(rectangle_img)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 519
-        },
-        "id": "wBl9V-fSmDi0",
-        "outputId": "0124074a-2716-419c-c3b2-5a235134e882"
-      },
-      "outputs": [],
-      "source": [
-        "#circle\n",
-        "circle_img = cv2.circle(OG_img,(447,63),63,(0,255,0), -1)\n",
-        "cv2_imshow(circle_img)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 519
-        },
-        "id": "qBHGQzVBmY7R",
-        "outputId": "40e269d7-10ff-46bd-89f7-6e476a63dad4"
-      },
-      "outputs": [],
-      "source": [
-        "#text on the image\n",
-        "font = cv2.FONT_HERSHEY_COMPLEX\n",
-        "text_img = cv2.putText(OG_img,'Sushant',(10,50),font,4,(255,255,0),10,cv2.LINE_AA)\n",
-        "#10,50 is the location\n",
-        "#4 is the font size\n",
-        "#255,255,0 is color\n",
-        "#10 is the font thickness\n",
-        "\n",
-        "\n",
-        "cv2_imshow(text_img)"
-      ]
-    }
-  ],
-  "metadata": {
-    "colab": {
-      "include_colab_link": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.11.5"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/rbansal42/computer-vision/blob/main/2.%20Rheometric%20Shapes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "id": "xMpx_dU_nICY",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:01:37.566551Z",
+     "start_time": "2023-11-30T06:01:36.718722Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\r\n",
+      "Requirement already satisfied: opencv-python in /Users/rb/Library/Python/3.9/lib/python/site-packages (4.8.1.78)\r\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /Users/rb/Library/Python/3.9/lib/python/site-packages (from opencv-python) (1.26.2)\r\n",
+      "\u001B[33mWARNING: You are using pip version 21.2.4; however, version 23.3.1 is available.\r\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001B[0m\r\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Installing Dependencies\n",
+    "\n",
+    "%pip install opencv-python\n",
+    "# from google.colab.patches import cv2_imshow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "id": "1UVKzkVNnZ1d",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:01:38.424547Z",
+     "start_time": "2023-11-30T06:01:38.419985Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully imported\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importing required packages\n",
+    "\n",
+    "import cv2\n",
+    "print(\"Successfully imported\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 555
+    },
+    "id": "QVt67IHRnk9x",
+    "outputId": "3522ad85-993a-4e95-b392-29dfb25b4427",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:01:40.522409Z",
+     "start_time": "2023-11-30T06:01:39.662157Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image read successfully\n",
+      "Rendering Image\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-30 11:31:39.729 Python[51371:1250093] WARNING: Secure coding is automatically enabled for restorable state! However, not on all supported macOS versions of this application. Opt-in to secure coding explicitly by implementing NSApplicationDelegate.applicationSupportsSecureRestorableState:.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reading image\n",
+    "\n",
+    "OG_img = cv2.imread(\"og_img.jpeg\")\n",
+    "print(\"Image read successfully\")\n",
+    "\n",
+    "# Viewing imported image\n",
+    "print(\"Rendering Image\")\n",
+    "cv2.imshow(\"img\", OG_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 555
+    },
+    "id": "SzwkytyXrrKj",
+    "outputId": "42c76939-f947-44f1-c640-f4889584b642",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:02:11.094125Z",
+     "start_time": "2023-11-30T06:02:09.009088Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted Successfully\n",
+      "Rendering Image\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Converting image to grayscale\n",
+    "gray_image = cv2.cvtColor(OG_img, cv2.COLOR_BGR2GRAY)\n",
+    "print(\"Converted Successfully\")\n",
+    "\n",
+    "# Saving grayscale image\n",
+    "# cv2.imwrite(\"gray_img.jpg\", gray_image)\n",
+    "# print(\"Saved Successfully\")\n",
+    "\n",
+    "# Viewing grayscale image\n",
+    "print(\"Rendering Image\")\n",
+    "cv2.imshow(\"img\", gray_image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 537
+    },
+    "id": "QE7wz8NHkLgx",
+    "outputId": "b7e64627-63a0-4a1a-c6f7-e717305e7d7e",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:02:18.798530Z",
+     "start_time": "2023-11-30T06:02:18.552179Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line Drawn Successfully\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#drawing a line on the image\n",
+    "\n",
+    "lined_img = cv2.line(OG_img, (0,0), (255,255), (0,0,255), 5) #(srcImg, start, end, color, thickness)\n",
+    "print(\"Line Drawn Successfully\")\n",
+    "\n",
+    "\n",
+    "cv2.imshow(\"img\", lined_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 519
+    },
+    "id": "bPen4BGDlDAA",
+    "outputId": "b525ee4f-9da1-4144-d7e3-8869b1dc58d3",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:33:23.950888Z",
+     "start_time": "2023-11-30T06:33:23.887833Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# drawing an arrow line on the img\n",
+    "\n",
+    "arrowed_line = cv2.arrowedLine(OG_img, (0,255), (255,255), (255,0,0), 6)\n",
+    "cv2.imshow(\"img\", arrowed_line)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 519
+    },
+    "id": "2TSxb5qrlvFT",
+    "outputId": "2a4aedf0-a597-472c-9241-36edc7a7f1bc",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:33:36.823124Z",
+     "start_time": "2023-11-30T06:33:36.268882Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#rectangle\n",
+    "rectangle_img = cv2.rectangle(OG_img, (384,0), (510,128), (0,255,0), 1)\n",
+    "cv2.imshow(\"img\", rectangle_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 519
+    },
+    "id": "wBl9V-fSmDi0",
+    "outputId": "0124074a-2716-419c-c3b2-5a235134e882",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:33:41.111171Z",
+     "start_time": "2023-11-30T06:33:38.893628Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#circle\n",
+    "circle_img = cv2.circle(OG_img,(447,63),63,(0,255,0), -1)\n",
+    "cv2.imshow(\"img\", circle_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 519
+    },
+    "id": "qBHGQzVBmY7R",
+    "outputId": "40e269d7-10ff-46bd-89f7-6e476a63dad4",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:33:44.825621Z",
+     "start_time": "2023-11-30T06:33:42.676853Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#text on the image\n",
+    "font = cv2.FONT_HERSHEY_COMPLEX\n",
+    "text_img = cv2.putText(OG_img,'Sushant',(10,50),font,4,(255,255,0),10,cv2.LINE_AA)\n",
+    "#10,50 is the location\n",
+    "#4 is the font size\n",
+    "#255,255,0 is color\n",
+    "#10 is the font thickness\n",
+    "\n",
+    "\n",
+    "cv2.imshow(\"img\", text_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "include_colab_link": true,
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
