--- a/3_resize_blur_flip_filter.ipynb
+++ b/3_resize_blur_flip_filter.ipynb
@@ -1,224 +1,315 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/rbansal42/computer-vision/blob/main/3_resize_blur_flip_filter.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AQthspwEzWtw",
-        "outputId": "481ed622-962d-4b70-a225-9a07cdf6e255"
-      },
-      "outputs": [],
-      "source": [
-        "# Installing Dependencies\n",
-        "\n",
-        "%pip install opencv-python\n",
-        "from google.colab.patches import cv2_imshow"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mhqy-oxgzY5g",
-        "outputId": "74eb4f3d-9eb0-4bd1-b3cf-ab9e43425c72"
-      },
-      "outputs": [],
-      "source": [
-        "# Importing required packages\n",
-        "\n",
-        "import cv2\n",
-        "print(\"Successfully imported\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 555
-        },
-        "id": "uI2Tjqx6zaWp",
-        "outputId": "f1f957ef-a0ef-4d90-c7d6-32b35a98b149"
-      },
-      "outputs": [],
-      "source": [
-        "# Reading image\n",
-        "\n",
-        "OG_img = cv2.imread(\"og_img.jpeg\")\n",
-        "print(\"Image read successfully\")\n",
-        "\n",
-        "# Viewing imported image\n",
-        "print(\"Rendering Image\")\n",
-        "cv2_imshow(OG_img)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 253
-        },
-        "id": "1DNlmkr_zi7A",
-        "outputId": "ef896cb7-9da6-4cb3-d15b-b190eb360928"
-      },
-      "outputs": [],
-      "source": [
-        "# Resizing Image\n",
-        "reduced_img = cv2.resize(OG_img, (300,200))\n",
-        "print(\"Converted Successfully\")\n",
-        "\n",
-        "# Viewing Resized Image\n",
-        "print(\"Rendering Image\")\n",
-        "cv2_imshow(reduced_img)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 519
-        },
-        "id": "TYVfeleO0nHM",
-        "outputId": "46b02c17-2a8e-4249-8964-2205d4b43252"
-      },
-      "outputs": [],
-      "source": [
-        "# Rotating Image\n",
-        "rotated_img = cv2.rotate(OG_img, cv2.ROTATE_180)\n",
-        "\n",
-        "# Viewing Rotated Image\n",
-        "cv2_imshow(rotated_img)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 453
-        },
-        "id": "ap9xt3Es05TA",
-        "outputId": "a04111b9-eaf3-45ae-c99b-5a87a336c075"
-      },
-      "outputs": [],
-      "source": [
-        "# Flipping Image\n",
-        "hz_flipped_img = cv2.flip(reduced_img, 0) #Horizontal Flip\n",
-        "vt_flipped_img = cv2.flip(reduced_img, 1) #Vertical Flip\n",
-        "\n",
-        "# Viewing Flipped Image\n",
-        "print(\"Rendering horizontally flipped image\")\n",
-        "cv2_imshow(hz_flipped_img)\n",
-        "print(\"Rendering vertically flipped image\")\n",
-        "cv2_imshow(vt_flipped_img)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 453
-        },
-        "id": "iyaUEkQ-1Ov5",
-        "outputId": "df15e691-0e35-41bf-e182-47c07a69803e"
-      },
-      "outputs": [],
-      "source": [
-        "# Blurring Image\n",
-        "blurred_img = cv2.blur(reduced_img, (5,5)) #Less Blur\n",
-        "more_blurred_img = cv2.blur(reduced_img, (50,50)) #High Blur\n",
-        "\n",
-        "# Viewing Blurred Image\n",
-        "print(\"Rendering less blurry image\")\n",
-        "cv2_imshow(blurred_img)\n",
-        "print(\"Rendering more blurry image\")\n",
-        "cv2_imshow(more_blurred_img)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
-        },
-        "id": "moOm2XSp1_cu",
-        "outputId": "8f788c2c-4f4f-4ad5-88ca-7ac73edb5dac"
-      },
-      "outputs": [],
-      "source": [
-        "# GBlurring Image\n",
-        "gBlurred_img = cv2.GaussianBlur(reduced_img, (5,5), 0) #Gausian Blur\n",
-        "\n",
-        "# Viewing Gausian Blurred Image\n",
-        "print(\"Rendering image\")\n",
-        "cv2_imshow(gBlurred_img)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 453
-        },
-        "id": "EJkmDPt82Qjg",
-        "outputId": "30e3fd28-422f-431e-cb06-ff1ba84740b1"
-      },
-      "outputs": [],
-      "source": [
-        "# Applying filters to Image\n",
-        "filter1_img = cv2.boxFilter(reduced_img, -1, (5,5)) #Less Blur\n",
-        "filter2_img = cv2.boxFilter(reduced_img, -1, (50,50)) #High Blur\n",
-        "\n",
-        "# Viewing Blurred Image\n",
-        "print(\"Rendering less blurry image\")\n",
-        "cv2_imshow(filter1_img)\n",
-        "print(\"Rendering more blurry image\")\n",
-        "cv2_imshow(filter2_img)"
-      ]
-    }
-  ],
-  "metadata": {
-    "colab": {
-      "authorship_tag": "ABX9TyPyteT4fcdZL2Nv8eGtXPHU",
-      "include_colab_link": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/rbansal42/computer-vision/blob/main/3_resize_blur_flip_filter.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "AQthspwEzWtw",
+    "outputId": "481ed622-962d-4b70-a225-9a07cdf6e255",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:33:50.823890Z",
+     "start_time": "2023-11-30T06:33:50.010697Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\r\n",
+      "Requirement already satisfied: opencv-python in /Users/rb/Library/Python/3.9/lib/python/site-packages (4.8.1.78)\r\n",
+      "Requirement already satisfied: numpy>=1.17.0 in /Users/rb/Library/Python/3.9/lib/python/site-packages (from opencv-python) (1.26.2)\r\n",
+      "\u001B[33mWARNING: You are using pip version 21.2.4; however, version 23.3.1 is available.\r\n",
+      "You should consider upgrading via the '/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip' command.\u001B[0m\r\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Installing Dependencies\n",
+    "\n",
+    "%pip install opencv-python\n",
+    "# from google.colab.patches import cv2_imshow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "mhqy-oxgzY5g",
+    "outputId": "74eb4f3d-9eb0-4bd1-b3cf-ab9e43425c72",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:33:51.992075Z",
+     "start_time": "2023-11-30T06:33:51.816119Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully imported\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importing required packages\n",
+    "\n",
+    "import cv2\n",
+    "print(\"Successfully imported\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 555
+    },
+    "id": "uI2Tjqx6zaWp",
+    "outputId": "f1f957ef-a0ef-4d90-c7d6-32b35a98b149",
+    "ExecuteTime": {
+     "end_time": "2023-11-30T06:34:04.770389Z",
+     "start_time": "2023-11-30T06:34:02.394091Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image read successfully\n",
+      "Rendering Image\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-30 12:04:02.428 Python[51773:1382004] WARNING: Secure coding is automatically enabled for restorable state! However, not on all supported macOS versions of this application. Opt-in to secure coding explicitly by implementing NSApplicationDelegate.applicationSupportsSecureRestorableState:.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "-1"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reading image\n",
+    "\n",
+    "OG_img = cv2.imread(\"og_img.jpeg\")\n",
+    "print(\"Image read successfully\")\n",
+    "\n",
+    "# Viewing imported image\n",
+    "print(\"Rendering Image\")\n",
+    "cv2.imshow(\"img\", OG_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 253
+    },
+    "id": "1DNlmkr_zi7A",
+    "outputId": "ef896cb7-9da6-4cb3-d15b-b190eb360928"
+   },
+   "outputs": [],
+   "source": [
+    "# Resizing Image\n",
+    "reduced_img = cv2.resize(OG_img, (300,200))\n",
+    "print(\"Converted Successfully\")\n",
+    "\n",
+    "# Viewing Resized Image\n",
+    "print(\"Rendering Image\")\n",
+    "cv2.imshow(\"img\", reduced_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 519
+    },
+    "id": "TYVfeleO0nHM",
+    "outputId": "46b02c17-2a8e-4249-8964-2205d4b43252"
+   },
+   "outputs": [],
+   "source": [
+    "# Rotating Image\n",
+    "rotated_img = cv2.rotate(OG_img, cv2.ROTATE_180)\n",
+    "\n",
+    "# Viewing Rotated Image\n",
+    "cv2.imshow(\"img\", rotated_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 453
+    },
+    "id": "ap9xt3Es05TA",
+    "outputId": "a04111b9-eaf3-45ae-c99b-5a87a336c075"
+   },
+   "outputs": [],
+   "source": [
+    "# Flipping Image\n",
+    "hz_flipped_img = cv2.flip(reduced_img, 0) #Horizontal Flip\n",
+    "vt_flipped_img = cv2.flip(reduced_img, 1) #Vertical Flip\n",
+    "\n",
+    "# Viewing Flipped Image\n",
+    "print(\"Rendering horizontally flipped image\")\n",
+    "cv2.imshow(\"img\", hz_flipped_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)\n",
+    "\n",
+    "print(\"Rendering vertically flipped image\")\n",
+    "cv2.imshow(\"img\", vt_flipped_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 453
+    },
+    "id": "iyaUEkQ-1Ov5",
+    "outputId": "df15e691-0e35-41bf-e182-47c07a69803e"
+   },
+   "outputs": [],
+   "source": [
+    "# Blurring Image\n",
+    "blurred_img = cv2.blur(reduced_img, (5,5)) #Less Blur\n",
+    "more_blurred_img = cv2.blur(reduced_img, (50,50)) #High Blur\n",
+    "\n",
+    "# Viewing Blurred Image\n",
+    "print(\"Rendering less blurry image\")\n",
+    "cv2.imshow(\"img\", blurred_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)\n",
+    "\n",
+    "print(\"Rendering more blurry image\")\n",
+    "cv2.imshow(\"img\", more_blurred_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 235
+    },
+    "id": "moOm2XSp1_cu",
+    "outputId": "8f788c2c-4f4f-4ad5-88ca-7ac73edb5dac"
+   },
+   "outputs": [],
+   "source": [
+    "# GBlurring Image\n",
+    "gBlurred_img = cv2.GaussianBlur(reduced_img, (5,5), 0) #Gausian Blur\n",
+    "\n",
+    "# Viewing Gausian Blurred Image\n",
+    "print(\"Rendering image\")\n",
+    "cv2.imshow(\"img\", gBlurred_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 453
+    },
+    "id": "EJkmDPt82Qjg",
+    "outputId": "30e3fd28-422f-431e-cb06-ff1ba84740b1"
+   },
+   "outputs": [],
+   "source": [
+    "# Applying filters to Image\n",
+    "filter1_img = cv2.boxFilter(reduced_img, -1, (5,5)) #Less Blur\n",
+    "filter2_img = cv2.boxFilter(reduced_img, -1, (50,50)) #High Blur\n",
+    "\n",
+    "# Viewing Blurred Image\n",
+    "print(\"Rendering less blurry image\")\n",
+    "cv2.imshow(\"img\", filter1_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)\n",
+    "\n",
+    "print(\"Rendering more blurry image\")\n",
+    "cv2.imshow(\"img\", filter2_img)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n",
+    "cv2.waitKey(1)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyPyteT4fcdZL2Nv8eGtXPHU",
+   "include_colab_link": true,
+   "provenance": []
+  },
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
